eks/alb/test_dev/rds_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rds-service
spec:
  type: ExternalName
  externalName: '${RDS endpoint}'
