eks/alb/test_dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: application-service
spec:
  selector:
    app: webapplication
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
